--- a/style.css
+++ b/style.css
@@ -15,8 +15,11 @@ body {
   background-color: red;
   position: relative;
   top: 150px;
-  animation: jump 500ms infinite linear;
 }
+.animate {
+  animation: jump 500ms;
+}
+
 
 #block {
   width: 20px;
