--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 body {
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #game {
   width: 500px;
   height: 200px;
   border: 1px solid;
+  margin-top: 100px;
 }
 
 #character {
@@ -19,7 +23,6 @@ body {
 .animate {
   animation: jump 500ms;
 }
-
 
 #block {
   width: 20px;
